[package]
name = "travellers-os"
version = "0.1.0"
edition = "2021"
default-run = "travellers-os"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[workspace]
members = ["kernel"]

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.7"
